Consider the major version when registering singletons

Amends 9225723a317b8c7e805416592b78aca0ed320049

Fixes: QTBUG-117958
Pick-to: 6.6 6.5
Change-Id: Ifbaa30d6f82e37d35d7d3be57fe562dae9d09c10
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>