src/qml/qml/qqml.cpp
@@ -651,7 +651,7 @@ int QQmlPrivate::qmlregister(RegistrationType type, void *data)
 
         const QTypeRevision added = revisionClassInfo(
                     type.classInfoMetaObject, "QML.AddedInVersion",
-                    QTypeRevision::fromMinorVersion(0));
+                    QTypeRevision::fromVersion(type.version.majorVersion(), 0));
         const QTypeRevision removed = revisionClassInfo(
                     type.classInfoMetaObject, "QML.RemovedInVersion");
         const QList<QTypeRevision> furtherRevisions = revisionClassInfos(type.classInfoMetaObject,
